# calculadora-Juridica

./: .gitignore  README-CLIENTE-MAC-LINUX.md  README-CLIENTE.md  README.md  table_dump.txt
.notebook/: INDEX.md  cartilha-progression-rule.md  excel-calculator-flow.md  frontend-judicial-print-report.md  frontend-legal-base.md  local-windows-build.md  medical-progression-2012.md  pdf-layout-variants.md  persistence-flow.md
.reversa/: config.toml  plan.md  setup.json  state.json
.tmp/: promotionCalculator.verify.mjs
_reversa_sdd/: architecture.md  c4-components.md  c4-containers.md  c4-context.md  code-analysis.md  data-dictionary.md  dependencies.md  domain.md  erd-complete.md  inventory.md  permissions.md  state-machines.md
data/: contracheques.db
docs/: 09 - CARTILHA PROMOÇÃO.md  LEI N. 4.852, DE 12 DE JUNHO DE 2019.md  LEI N. 5.928, DE 15 DE JUNHO DE 2022.md  LEI Nº 6.460, DE 28 DE SETEMBRO DE 2023.md  LEI Nº 7.014, DE 19 DE AGOSTO DE 2024.md  LEI Nº 7.799, DE 20 DE OUTUBRO DE 2025.md  Lei n. 5.771, DE 10 DE JANEIRO DE 2022.md  README.md  extracao-pdf-node.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
release/calculadora-juridica-local/: pyproject.toml
release/calculadora-juridica-local/data/: contracheques.db
release/calculadora-juridica-local/src/contracheque_extractor/: __init__.py  api.py  cli.py  local_app.py  repository.py
scripts/: build_unix_release.sh  build_windows_release.ps1  generate_legal_md_docs.py
tests/: test_api.py  test_local_app.py  test_service.py
(+99 files in other folders)
